# MyWeatherData_Proj

./: Modul_1p1.md  Modul_1p2.md  Modul_1p3.md  Modul_2.md  Modul_3.md  Modul_4.md  Modul_5.md  Modul_6.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: agile_estimator.agent.md  ar-architecture-designer-static-views.agent.md  architecture_designer.agent.md  req_engineer.agent.md  req_reviewer.agent.md  risk_auditor.agent.md  rq-requirement-engineer.agent.md  rq-story-crafter.agent.md  sprint_planner.agent.md  story_crafter.agent.md  sw-destructive-reviewer.agent.md  sw-import-client-developer.agent.md
.github/prompts/: epic.prompt.md  epic_slicing.prompt.md  functional_requirement.prompt.md  module_2_requirement_pipeline.prompt.md  module_3_effort_estimation.prompt.md  module_3_project_management.prompt.md  module_3_project_plan.prompt.md  module_3_risk_audit.prompt.md  plan-importClient.prompt.md  requirement_review.prompt.md  user_story.prompt.md
.github/workflows/: ci.yml
arc/dynamische_sichten/: sequenzsicht-import-lufttemperatur.puml  sequenzsicht.md
arc/statische_sichten/: README.md  klassensicht-core.puml  klassensicht-datenhaltung.puml  klassensicht-import-client.puml  klassensicht-ui.puml  klassensicht-visualisierung.puml  klassensicht.md  komponentensicht-ebene1.puml  komponentensicht-ebene2-core.puml  kontextsicht.md  (+5 more)
pjm/: import-client-implementation-plan.md  vertical-slice-prototyp.md
req/: README.md  traceability-matrix.md
tests/: conftest.py  destructive-qa-log.md  test_plan_import_client.md  traceability.md
(+175 files in other folders)
